# json2ioc

./: .gitignore  README.md  parse.py  setup.cfg  setup.py  subscreator.py
.github/workflows/: python-package.yaml
iocs/example1/: .gitignore  README.md  mod.conf
iocs/example1/configure/: RELEASE
iocs/example1/example1App/Db/: Makefile  template.substitutions
iocs/example1/example1App/src/: Makefile  example1Main.cpp
iocs/example1/iocBoot/iocexample1/: st.cmd
iocs/example1/json_config/: example.json
iocs/example2/: .gitignore  README.md
iocs/example2/configure/: RELEASE
iocs/example2/example2App/Db/: Makefile  example2Version.db  user.substitutions
iocs/example2/example2App/src/: Makefile  devexample2Version.c  devexample2Version.dbd  example2Hello.c  example2Main.cpp
iocs/example2/iocBoot/iocexample2/: st.cmd
scripts/: json2ioc
src/json2ioc/: __init__.py  __main__.py  create_subs_stcmd.py  parser.py  paths.py  read_write.py  start_command.py  substitutions.py
src/tests/: test_parser.py  test_paths.py  test_read_write.py  test_st_cmd.py  test_subs.py
src/tests/fixtures/: conf.py  ioc.py  paths.py  read_write.py  st_cmd.py  subs.py
tests/: test_paths.py  test_read_write.py
