[metadata]
name = json2ioc
version = 1.0
author = Savarese Giovanni
author_email = savarese.giovanni94@gmail.com
description = Create EPICS IOCs from json configurations
long_description= file: README.md
long_description_content_type = text/markdown
#url = myurl
#project_urls =
#    Bug Tracker = myruls/issues
classifiers = 
    Programming language :: Python :: 3
    License :: OSI Approved :: MIT Lincese
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src